kubernetes/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-dep
  name: mysql-svc
spec:
  ports:
    - name: mysql-svc
      port: 3306
      protocol: TCP
  selector:
    app: mysql-dep
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-dep
  labels:
    app: mysql-dep
spec:
  selector:
    matchLabels:
      app: mysql-dep
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-dep
    spec:
      containers:
        - image: mysql
          args: ["--default-authentication-plugin=mysql_native_password"]
          name: mysql-container
          ports:
            - containerPort: 3306
              name: mysql-container
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
