kubernetes/ingress-rule.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wordpress.salvador.org
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 80
